# dvforge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  package-lock.json  package.json  plan.md  project.md  pyproject.toml  requirements.txt  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish-npm.yml  publish-test.yml  publish.yml
dvforge/: __main__.py  compiler.py  loader.py  model.py  utils.py
dvforge/generators/: attribute.py  entity.py  formxml.py  publisher.py  relationship.py  savedquery.py  solution.py
npx/: cli.ts  compiler.ts  package-lock.json  schemaGen.ts  tester.ts
npx/generators/: attribute.ts  entity.ts  publisher.ts  savedquery.ts
python/: .gitignore  README.md
python/dvforge/: __main__.py  loader.py  schema_gen.py  tester.py
python/dvforge/generators/: attribute.py  entity.py  formxml.py  optionset.py  relationship.py  (+2 more)
python/schemas/: entities.schema.json  optionsets.schema.json  solution.schema.json
schemas/: entities.schema.json
src/: README.md  cli.ts  compiler.ts  loader.ts  model.ts  package.json  schemaGen.ts  tsconfig.json  tsup.config.ts  utils.ts  validate.ts
src/generators/: attribute.ts  entity.ts  formxml.ts  optionset.ts  publisher.ts  relationship.ts  ribbondiff.ts  savedquery.ts  solution.ts
tests/: model.test.ts  relationship.test.ts  solution.test.ts  utils.test.ts  validate.test.ts
tests/generators/: attribute.test.ts  entity.test.ts  formxml.test.ts  optionset.test.ts  publisher.test.ts  relationship.test.ts  ribbondiff.test.ts  savedquery.test.ts  solution.test.ts
(+114 files in other folders)
