[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dvforge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml>=0.18",
    "pydantic>=2.0",
    "click>=8.0",
]
readme = "README.md"

[project.scripts]
dvforge = "dvforge.__main__:main"

[tool.setuptools.packages.find]
include = ["dvforge*"]
